# DT4LC-project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.streamlit/: config.toml
cognitive_ui/: app.py  cli.py  cognitive_functions.py  config.py  manager.py  sample_model.py  utils.py
cognitive_ui/core/: llm.py  visualization.py
cognitive_ui/ui/: components.py  widgets_visualization.py
cognitive_ui/ui/tabs/: change_analysis.py  dataset_analysis.py  problem_solving.py
digital_twin/models/prithvi_v1/: prithvi_mae.py
scripts/: fetch_prithvi_v1_weights.py
